--- a/frontend/src/styles/root/color.pattern.css
+++ b/frontend/src/styles/root/color.pattern.css
@@ -16,6 +16,7 @@
 
     --color-gray-main: #1e1e1e;
     --color-gray-secondary: #181818;
+    --color-gray-thirty: #404040;
     --color-gray-light: #7A7A7A;
     --color-gray-lighter: #cfcfcf;
     --color-gray-medium: #666666;
