--- a/frontend/src/styles/modules/header.module.css
+++ b/frontend/src/styles/modules/header.module.css
@@ -1,4 +1,3 @@
-/* src/styles/header.module.css */
 .header {
     height: 80px;
     background: var(--app-primary-color);
@@ -6,6 +5,7 @@
     align-items: center;
     padding: 0 1rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    justify-content: space-between; /* Asegura separación */
 }
 
 .title {
