--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -51,11 +51,18 @@
                 <div class="formMain">
                     <button type="submit" class="button">Sign Up</button>
                 </div>
-
-                <div th:if="${message}" class="registerText" th:text="${message}"></div>
-                <div th:if="${error}" class="registerText" th:text="${error}"></div>
             </form>
         </div>
+        <!-- Success Message -->
+        <div th:if="${message}" class="toast toast-success">
+            <p th:text="${message}"></p>
+        </div>
+
+        <!-- Error Message -->
+        <div th:if="${error}" class="toast toast-error">
+            <p th:text="${error}"></p>
+        </div>
+
         <div class="right"></div>
     </div>
 </div>
