--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,8 @@
     <title>Login</title>
     <link rel="stylesheet" th:href="@{/styles/style.css}" />
     <link rel="stylesheet" th:href="@{/styles/index.css}" />
+
+    <link rel="icon" href="/favicon.png" type="image/x-icon" />
 </head>
 <body>
 
@@ -62,7 +64,7 @@
 
             </form>
         </div>
-        <div class="right"></div>
+        <div class="right right-login"></div>
     </div>
 </div>
 <script>
