--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,6 +4,8 @@
     <title>Register</title>
     <link rel="stylesheet" th:href="@{/styles/style.css}" />
     <link rel="stylesheet" th:href="@{/styles/index.css}" />
+
+    <link rel="icon" href="/favicon.png" type="image/x-icon" />
 </head>
 <body>
 <div class="container">
@@ -63,7 +65,7 @@
             <p th:text="${error}"></p>
         </div>
 
-        <div class="right"></div>
+        <div class="right right-register"></div>
     </div>
 </div>
 </body>
