--- a/frontend/src/styles/modules/header.module.css
+++ b/frontend/src/styles/modules/header.module.css
@@ -5,11 +5,11 @@
     align-items: center;
     padding: 0 1rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    justify-content: space-between; /* Asegura separación */
+    justify-content: space-between;
 }
 
-.title {
-    color: var(--title-text-color);
-    font-size: 1.5rem;
-    margin: 0;
+/* Estilos para la imagen */
+.logo {
+    height: 40px;      /* ajusta a tu gusto */
+    object-fit: contain;
 }
